# one-click-video

./: .env.example  .gitignore  alembic.ini  docker-compose.dev.yml  pyproject.toml  requirements.txt
.agent/: skills_index.json
.agent/.github/: MAINTENANCE.md
.agent/scripts/: generate_index.py  update_readme.py
.agent/skills/clean-architecture-setup/: Doc.md  SKILL.md  SOP.md  architecture-compliance.md
.agent/skills/clean-architecture-setup/checklists/: code-review-checklist.md  pre-commit-checklist.md
.agent/skills/clean-architecture-setup/decision-trees/: entity-vs-value-object.md  repository-vs-service.md  where-to-put-code.md
.agent/skills/clean-architecture-setup/examples/: order-module.md
.agent/skills/commit-writter/: SKILL.md  examples.md  format.md  rules.md
.agent/skills/dev-explainer/: SKILL.md  error.md  explain.md  style.md
.agent/workflows/: commit-push.md  explain.md  guided-learning.md
alembic/: env.py  script.py.mako
docker/: Dockerfile.api  Dockerfile.worker
docker/pgadmin/: pgpass  servers.json
docs/: DEVELOPMENT.md
frontend/components/: Sidebar.tsx
llm_context/: PROJECT_OVERVIEW.md  System_Design.md  description.md
llm_context/Architecture/: features.md  tech_stack.md
llm_context/Architecture/layers/: application.md  domain.md  infrastructure.md
src/api/: main.py
src/shared/config/: settings.py
src/shared/database/: base.py  dependencies.py  session.py
src/worker/: celery_app.py  tasks.py
tests/: conftest.py
tests/integration/: test_video_api.py
tests/unit/: test_video_job.py
(+27 files in other folders)
